# python-railway-template

./: .gitignore  Dockerfile  Makefile  RAILWAY_DEPLOY.md  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  railway.toml
.cursor/rules/: general.mdc  project.mdc  python.mdc  selenium.mdc  testing.mdc  tools.mdc
src/: __init__.py  constants.py  main.py  scraper.py
src/utils/: __init__.py  logger.py
tests/: test_main.py
