[project]
name = "python-railway-template"
version = "0.1.0"
description = "Modern Python template for Railway deployment with uv, Ruff, and Docker"
readme = "README.md"
authors = [
    { name = "Asuma Yamada", email = "yamadaasuma@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "selenium>=4.34.0",
]

[project.scripts]
app = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
